--- a/scss/media/_media.scss
+++ b/scss/media/_media.scss
@@ -5,7 +5,7 @@
     }
 
     .container {
-        width: 734px;
+        max-width: 734px;
     }
 
     .wrapper {
@@ -430,7 +430,7 @@
     }
 
     .container {
-        width: 350px;
+        max-width: 350px;
     }
 
     .wrapper {
