--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -49,7 +49,7 @@ a {
     text-align: center;
 
     /* Подзаголовки №2 */
-    font-family: $font-second;
+    font-family: $font-main;
     font-size: 28px;
     font-style: normal;
     font-weight: 400;
