--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,6 +1,6 @@
 //Fonts
 $font-main: 'Roboto', sans-serif;
-$font-second: "Caladea", sans-serif;
+// $font-second: "Caladea", sans-serif;
 
 //Colors
 $white: #fff;
