--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -35,11 +35,13 @@
         position: absolute;
         width: 210px;
         height: 210px;
+        // width: 240px;
+        // height: 240px;
         right: 0px;
         bottom: 0px;
         transform: translate(50%, 50%);
 
-        background-image: url(../img/about/about-feanite-brill-1440.png);
+        background-image: url(../img/about/about-feanite-brill-1440-240.svg);
         background-position: center;
 
         background-size: cover;
