--- a/scss/blocks/_address-link.scss
+++ b/scss/blocks/_address-link.scss
@@ -12,7 +12,7 @@
     color: $secondary;
 
     /* Шапка */
-    font-family: $font-second;
+    font-family: $font-main;
     font-style: normal;
     font-weight: 400;
     line-height: 19.2px;
