--- a/scss/blocks/_guarantors.scss
+++ b/scss/blocks/_guarantors.scss
@@ -72,7 +72,7 @@ $brill__items: 6;
 $brill__offset: 24px;
 
 .brill__image {
-    flex: 0 0 calc(16.66666666666667% - $brill__offset * ($brill__items - 1));
+    flex: 0 0 17.5%;
 }
 
 // .round::after {
