--- a/scss/blocks/_what.scss
+++ b/scss/blocks/_what.scss
@@ -17,8 +17,8 @@
 }
 
 .what-second {
-    background-color: $background-second;
-    outline: $background 1px solid;
+    background-color: $background;
+    outline: $background-second 1px solid;
 
     &__content-second {
         padding-top: 36px;
