--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -41,7 +41,7 @@
         bottom: 0px;
         transform: translate(50%, 50%);
 
-        background-image: url(../img/about/about-feanite-brill-1440-240.svg);
+        background-image: url(./../img/about/about-feanite-brill-1440-240.svg);
         background-position: center;
 
         background-size: cover;
